@@ -15,71 +15,6 @@
 
 #include "tools.h"
 
-static int vg_remove_single(struct cmd_context *cmd, const char *vg_name,
-			    struct volume_group *vg, int consistent,
-			    force_t force)
-{
-	struct physical_volume *pv;
-	struct pv_list *pvl;
-	int ret = 1;
-
-	if (!vg || !consistent || (vg_status(vg) & PARTIAL_VG)) {
-		log_error("Volume group \"%s\" not found or inconsistent.",
-			  vg_name);
-		log_error("Consider vgreduce --removemissing if metadata "
-			  "is inconsistent.");
-		return 0;
-	}
-
-	if (!vg_check_status(vg, EXPORTED_VG))
-		return 0;
-
-	if (vg->lv_count) {
-		log_error("Volume group \"%s\" still contains %d "
-			  "logical volume(s)", vg_name, vg->lv_count);
-		return 0;
-	}
-
-	if (!archive(vg))
-		return 0;
-
-	if (!vg_remove(vg)) {
-		log_error("vg_remove %s failed", vg_name);
-		return 0;
-	}
-
-	/* init physical volumes */
-	list_iterate_items(pvl, &vg->pvs) {
-		pv = pvl->pv;
-		log_verbose("Removing physical volume \"%s\" from "
-			    "volume group \"%s\"", dev_name(pv_dev(pv)), vg_name);
-		pv->vg_name = ORPHAN;
-		pv->status = ALLOCATABLE_PV;
-
-		if (!dev_get_size(pv_dev(pv), &pv->size)) {
-			log_error("%s: Couldn't get size.", dev_name(pv_dev(pv)));
-			ret = 0;
-			continue;
-		}
-
-		/* FIXME Write to same sector label was read from */
-		if (!pv_write(cmd, pv, NULL, INT64_C(-1))) {
-			log_error("Failed to remove physical volume \"%s\""
-				  " from volume group \"%s\"",
-				  dev_name(pv_dev(pv)), vg_name);
-			ret = 0;
-		}
-	}
-
-	backup_remove(cmd, vg_name);
-
-	if (ret)
-		log_print("Volume group \"%s\" successfully removed", vg_name);
-	else
-		log_error("Volume group \"%s\" not properly removed", vg_name);
-
-	return ret;
-}
 static int vgremove_single(struct cmd_context *cmd, const char *vg_name,
 			   struct volume_group *vg, int consistent,
 			   void *handle __attribute((unused)))
