@@ -1,5 +1,6 @@
 Version 2.02.28 -
 ================================
+  Move guts of vgremove into library.
   Fix inconsistent licence notices: executables are GPLv2; libraries LGPLv2.1.
   Move guts of lvremove into library.
   Allow clvmd debug to be turned on in a running daemon using clvmd -d
